src/components/Hooks/useModal/modal.module.css
.backdrop {
  z-index: 1100;
  position: fixed;
  top: 0;
  width: 100%;
  height: 100vh;  

  display: grid;
  place-items: center;
  background: rgba(0, 0, 0, 0.55);
  backdrop-filter: blur(3px);
}

.close {
  display: none;
}

/* modal */
/* 
.modal {
  position: relative;
  font-family: var(--font-main);

  display: grid;
  row-gap: 0.75em;

  max-width: 45vw;
  max-height: 90vh;
  height: auto;
  background: var(--bg);
  border: var(--section-border);
  padding: 1rem;
} */

/* custom scroll bar for non-mobile */
@media screen and (min-width: 768px) {

  .modal::-webkit-scrollbar {
    width: 1px;
  }
  
  .modal::-webkit-scrollbar-track {
    background: var(--color-bg);
  }
  
  .modal::-webkit-scrollbar-thumb {
    background: var(--color-2);
  }
}

